the format allows to include key - value pairs, with no sweat!

--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -8,7 +8,11 @@
     <h1>{{ pageTitle(post) }}</h1>
     {{ removePageHeading(post) }}
     <hr>
+    <p>	Keywords: {{ post.meta.keywords }}  </p>
+    <p> Abstract: {{ post.meta.abstract }} </p>
+    <p> Date: {{ post.meta.date }} </p>
+    
      <p class="meta tiny">
-        {{ post.props.mtimeUTC|date('%x') }} file {{ post.props.name }} with post.html
+        {{ post.props.mtimeUTC|date('%x') }} file {{ post.props.name }} with post.html XX
     </p>
 {% endblock -%}
