--- a/theme/templates/postList.html
+++ b/theme/templates/postList.html
@@ -2,10 +2,12 @@
 
 {%- block content %}
 {% for post in posts|sort(by="mtime", reverse=true) %}
-    {{ postPreview(post) }}
+   <p> <a href="/posts/{{ post.props.name }}"> 
+    {{ post.meta.title }} <br> Keywords: {{ post.meta.keywords }} -- {{ post.meta.abstract }}  
+   </p>
 {% endfor %}
     <hr>
      <p class="meta tiny">
-        {{ page.props.mtimeUTC|date('%x') }} file {{ page.props.name }} with page.html
+        {{ page.props.mtimeUTC|date('%x') }} with file postList.html 
     </p>
 {% endblock -%}
