applied the changes suggested by dammers as well as i understand them the result is not yet in the tempate

--- a/theme/templates/postList.html
+++ b/theme/templates/postList.html
@@ -1,9 +1,9 @@
 {% extends 'master.html' %}
 
 {%- block content %}
-{% for post in posts|sort(by="mtime", reverse=true) %}
+{% for post in posts|sort(by="mtime") %}
    <p> <a href="/posts/{{ post.props.name }}"> 
-    {{ post.meta.title }} <br> Keywords: {{ post.meta.keywords }} -- {{ post.meta.abstract }}  
+    {{ post.meta.title }}  <br> Keywords: {{ post.meta.keywords }} -- {{ post.meta.abstract }}  
    </p>
 {% endfor %}
     <hr>
