changed folowing the suggestion by dammers not working

--- a/theme/templates/master.html
+++ b/theme/templates/master.html
@@ -23,7 +23,7 @@
         </section>
     
      <p class="meta tiny">
-        Produced with Sprinkles on {{ datetime.date.today }}.
+        Produced with Sprinkles on {{ date }} x.
     </p>
     </body>
 </html>
