changing page and post to be specific postVar or postTemplate

--- a/templates/pageTemplate.html
+++ b/templates/pageTemplate.html
@@ -9,7 +9,7 @@
     {{ removePageHeading(pageVar) }}
     <hr>
      <p class="meta tiny">
-        {{ pageVar.props.mtimeUTC|date('%x') }} file {{ pageVar.props.name }} with page.html
+        {{ pageVar.props.mtimeUTC|date('%x') }} file {{ pageVar.props.name }} with pageTemplate.html
     </p>
 
 {% endblock -%}
