renamed variable and templates

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,11 +1,11 @@
-{% extends 'master.html' %}
+{% extends 'masterTemplate.html' %}
 {% block content %}
 <h1>Something Terrible Happened</h1>
 <p>
     Internal server error.
 </p>
 <p>
-    This is not your fault. You can try again later and hope we've fixed our
-    stuff.
+    The problem is with the files which go into the theme; 
+    check the output in the terminal where the server runs.
 </p>
 {% endblock %}
