--- a/templates/pageTemplate.html
+++ b/templates/pageTemplate.html
@@ -1,7 +1,7 @@
-{%- extends 'master.html' -%}   
+{%- extends 'masterTemplate.html' -%}   
 
 {%- block title %}
-    {{ pageTitle(page) }}
+    {{ pageTitle(pageVar) }}
 {% endblock -%}
 
 {%- block content %}
