--- a/templates/postList.html
+++ b/templates/postList.html
@@ -1,4 +1,4 @@
-{% extends 'master.html' %}
+{% extends 'masterTemplate.html' %}
 
 {%- block content %}
 {% for postVar in postsVar|sort(by="mtime", reverse=true) %}
