image shows, but format is wrong and not from post

--- a/templates/postTemplate.html
+++ b/templates/postTemplate.html
@@ -6,6 +6,7 @@
 
 {%- block content %}
     <h1>{{ pageTitle(postVar) }}</h1>
+      <img src="/../../images/DSC02769.JPG" alt="HTML5 Icon /../../images/DSC02769.JPG" style="width:1280px;height:1280px;"> 
     {{ removePageHeading(postVar) }}
     <hr>
     <p>	Keywords: {{ postVar.meta.keywords }}  </p>
