--- a/templates/masterNoImageTemplate.html
+++ b/templates/masterNoImageTemplate.html
@@ -16,7 +16,7 @@
             {{ renderMenu({"sub":menu}) }}
             </section>
         </section>
-        <section class="content">
+        <section class="contentNoImages">
         {% block content %}
         {% endblock %}
         </section>
