--- a/templates/postTemplate.html
+++ b/templates/postTemplate.html
@@ -6,7 +6,8 @@
 
 {%- block content %}
     <h1>{{ pageTitle(postVar) }}</h1>
-      <img src="/../../images/DSC02769.JPG" alt="HTML5 Icon /../../images/DSC02769.JPG" style="width:1280px;height:1280px;"> 
+     <p>  style="width:auto,height:1000px;" height value has no  </p>
+      <img src="/../../images/DSC02769.JPG" alt="HTML5 Icon /../../images/DSC02769.JPG" style="width:auto,height:1000px;"> 
     {{ removePageHeading(postVar) }}
     <hr>
     <p>	Keywords: {{ postVar.meta.keywords }}  </p>
